# ryggrad-tools

./: CMakeLists.txt  README.md
src/analysis/: SeqBySOMTrainer.cc
src/kmers/: KmerTable.cc  NonRedKmerTable.cc  NonRedKmerTable.h  TranscriptomeFromVaryK.cc
src/sequence/: FastaByLength.cc  FastaFromFastq.cc  FindORFs.cc  NucToProt.cc  SimulatePEReads.cc  SplitFasta.cc
